# transcribe-record-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  bot.py  config.py  pyproject.toml  requirements.txt
cogs/: ai.py  recorder.py
services/: audio_sink.py  bedrock.py  session.py  transcriber.py  voice_recv_patch.py
